...
            return;
          }

          final bool active = data['active'] ?? false;
          if (!active) {
            _isConnected = false;
            onStatusChanged(false, "Host is offline");
            return;
          }

          if (!_isConnected) {
            _isConnected = true;
            onStatusChanged(true, "Connected to Room: $roomId");
...
